<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable name="user" type="com.moose.reviewdemo.bean.User"/>
    </data>

    <LinearLayout
        android:id="@+id/activity_databinding"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.moose.reviewdemo.activities.DatabindingActivity"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <EditText
            android:id="@+id/moose_btn_name"
            android:hint="名称"
            android:text="@{user.name}"
            android:layout_width="match_parent"
            android:layout_height="48dp" />
        <EditText
            android:id="@+id/moose_btn_password"
            android:hint="密码"
            android:text="@{user.password}"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="48dp" />
        <Button
            android:id="@+id/moose_btn_toast"
            android:text="弹吐司"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:id="@+id/moose_ll_textcontainer"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:background="#ff9930"
            android:layout_height="match_parent"/>
    </LinearLayout>
</layout>
